--- a/index.html
+++ b/index.html
@@ -262,7 +262,9 @@ color:#9c9c9c;
 	     			<div class="main-header-container">
            		                <div class="main-header-col1">
 		                     <div class="zita-logo">
-<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img width="500" height="85" src="./ara-removebg-preview.png" class="custom-logo" alt="Pathway Hospital" decoding="async" srcset="" sizes="(max-width: 500px) 100vw, 500px" /></a></div>
+								<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img width="150" height="45" src="./logo__1_-removebg-preview.png" class="custom-logo" alt="Pathway Hospital" decoding="async" srcset="" sizes="(max-width: 500px) 30vw, 70px" style="margin-top: -12vh;" /></a>
+<br>
+<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img width="500" height="85" src="./ara-removebg-preview.png" class="custom-logo" alt="Pathway Hospital" decoding="async" srcset="" sizes="(max-width: 500px) 100vw, 500px" style="margin-top: -20vh;" /></a></div>
                         </div>
                           <div class="main-header-col2">
    
