--- a/index.html
+++ b/index.html
@@ -264,6 +264,16 @@ color:#9c9c9c;
 	transform: scale(1.4);
 	transition: transform 2s ease; 
 } */
+
+@media only screen and (max-width: 767px) {
+  #zoomy{
+	margin-top: -1vh !important;
+	padding-left: 10px !important ;
+	
+  }
+  
+}
+
 		</style>
 <div class="main-header mhdrcenter inline right-menu linkeffect-none">
 	     	<div class="main-header-bar two">
@@ -271,9 +281,9 @@ color:#9c9c9c;
 	     			<div class="main-header-container">
            		                <div class="main-header-col1">
 		                     <div class="zita-logo">
-								<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img width="150" height="45" src="./logo__1_-removebg-preview.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 30vw, 70px" style="margin-top: -8vh;" /></a>
+								<a   href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img  id="zuin" width="150" height="45" src="./logooooo.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 30vw, 70px" style="margin-top: -2.5vh;" /></a>
 <br>
-<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img id="zoomy" width="500" height="115" src="./hmm_logo-removebg-preview.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 200vw, 600px" style="margin-top: -12vh;" /></a></div>
+<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img id="zoomy" width="500" height="115" src="./hmm_logo-removebg-preview.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 200vw, 600px" style="margin-top: -3vh;" /></a></div>
                         </div>
                           <div class="main-header-col2">
    
