--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ color:#9c9c9c;
 	<!-- top-header start -->
 		<style>
 			#zoomy {
-  transform: scale(1.3); /* Adjust scale value to control zoom level */
+  transform: scale(2); /* Adjust scale value to control zoom level */
   /* Smooth transition */
 }
 /* #zoomy:hover{
@@ -281,9 +281,9 @@ color:#9c9c9c;
 	     			<div class="main-header-container">
            		                <div class="main-header-col1">
 		                     <div class="zita-logo">
-								<a   href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img  id="zuin" width="150" height="45" src="./logooooo.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 30vw, 70px" style="margin-top: -2.5vh;" /></a>
+								<!-- <a   href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img  id="zuin" width="150" height="45" src="./ARADHYA MULTISPECIALITY HOSPITAL PVT.LTD.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 30vw, 70px" style="margin-top: -2.5vh;" /></a> -->
 <br>
-<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img id="zoomy" width="500" height="115" src="./hmm_logo-removebg-preview.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 200vw, 600px" style="margin-top: -3vh;" /></a></div>
+<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img id="zoomy" width="500" height="115" src="./ARADHYA MULTISPECIALITY HOSPITAL PVT.LTD (1).png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 200vw, 600px" style="margin-top: -3vh;" /></a></div>
                         </div>
                           <div class="main-header-col2">
    
@@ -526,6 +526,31 @@ color:#9c9c9c;
 					</div>
 		</div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		<style>
 			@media (max-width: 768px) {
   .elementor-element-044b9b6 {
@@ -540,12 +565,243 @@ color:#9c9c9c;
 				</div>
 				<div class="elementor-element elementor-element-044b9b6 elementor-widget elementor-widget-image" data-id="044b9b6" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" style="border-radius: 10%;" width="340" height="135" src="./help.svg" class="attachment-large size-large wp-image-94" alt="" srcset="./help.svg 624w, ./help.svg 100w, ./help.svg 268w, ./help.svg 600w" sizes="(max-width: 640px) 100vw, 640px" />															</div>
+															<img loading="lazy" decoding="async" style="border-radius: 10%;" width="340" height="135" src="./help.svg" class="attachment-large size-large wp-image-94" alt="" srcset="./help.svg 624w, ./help.svg 100w, ./help.svg 268w, ./help.svg 600w" sizes="(max-width: 640px) 100vw, 640px" />	
+																												</div>
 				</div>
 					</div>
 		</div>
 							</div>
 		</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		<style>
+			.section {
+  padding: 4rem 0 2rem;
+}
+
+.section-title, .section-subtitle {
+  text-align: center;
+}
+
+.section-title {
+  font-size: var(--h1-font-size);
+  color: var(--first-color);
+  margin-bottom: var(--mb-3);
+}
+
+.section-subtitle {
+  display: block;
+  font-size: var(--smaller-font-size);
+  font-weight: var(--font-semi-bold);
+}
+
+/*===== LAYOUT =====*/
+.bd-container {
+  max-width: 1024px;
+  width: calc(100% - 2rem);
+  margin-left: var(--mb-2);
+  margin-right: var(--mb-2);
+}
+
+.bd-grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
+/*===== BUTTON =====*/
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--first-color-lighten);
+  padding: .75rem 1rem;
+  border-radius: .25rem;
+  transition: .3s;
+}
+
+.button:hover {
+  background-color: var(--first-color-dark);
+}
+
+/*===== CONTACT ME =====*/
+.contact__container {
+  row-gap: 2.5rem;
+}
+
+.contact__content {
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.contact__box {
+  background-color: #fff;
+  border-radius: .5rem;
+  padding: 1.5rem;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(174, 190, 205, .3);
+}
+
+.contact__icon, .contact__title {
+  color: var(--first-color);
+}
+
+.contact__icon {
+  font-size: 2rem;
+}
+
+.contact__title {
+  font-size: var(--h3-font-size);
+  margin: var(--mb-1) 0;
+}
+
+.contact__social {
+  color: var(--first-color-light);
+  font-size: 1.25rem;
+  margin: 0 var(--mb-1);
+}
+
+.contact__box:hover {
+  box-shadow: 0 6px 8px rgba(174, 190, 205, .4);
+}
+
+.contact__inputs {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1rem;
+}
+
+.contact__input, .contact__button {
+  outline: none;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+}
+
+.contact__input {
+  width: 100%;
+  padding: 1rem;
+  border: 2px solid var(--first-color-light);
+  color: var(--first-color);
+  border-radius: .5rem;
+  margin-bottom: var(--mb-1);
+}
+
+.contact::placeholder {
+  color: var(--first-color-light);
+  font-family: var(--body-font);
+  font-weight: var(--font-semi-bold);
+}
+
+.contact__button {
+  cursor: pointer;
+  border: none;
+}
+
+/*===== MEDIA QUERIES =====*/
+@media screen and (min-width: 576px) {
+  .contact__form {
+    width: 450px;
+    justify-self: center;
+  }
+
+  .contact__container{
+	margin-left: 20px !important;
+	/* padding-left: 300px; */
+	width: 60vw;
+}
+}
+
+@media screen and (min-width: 1024px) {
+  .bd-container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+}
+.contact__container{
+	margin-left: 260px;
+	/* padding-left: 300px; */
+	width: 100vw;
+}
+@media only screen and (max-width: 767px) {
+	.contact__container{
+	margin-left: 90px;
+	/* padding-left: 300px; */
+	width: 60vw;
+}
+}
+
+.section-title{
+	margin: auto;
+	font-weight: 600;
+	font-size: 2rem;
+}
+		</style>
+		<h2 class="section-title">Contact Us</h2>
+		<div class="contact__container bd-grid">
+			<div class="contact__content bd-grid">
+			  <div class="contact__box">
+				<i class="bx bx-home contact__icon"></i>
+				<h3 class="contact__title"><b>Location</b> </h3>
+				<span class="contact__description">
+
+					Mehar Baba Complex , Kadumane Gate, Eagle Town Road Bidadi hobli, Taluk, Bidadi, Karnataka 562109
+				</span>
+			  </div>
+		
+			  <div class="contact__box">
+				<i class="bx bx-phone contact__icon"></i>
+				<h3 class="contact__title"><b>Phone</b></h3>
+				<span class="contact__description">+91 8105419810</span>
+			  </div>
+		
+			  <div class="contact__box">
+				<i class="bx bx-envelope contact__icon"></i>
+				<h3 class="contact__title"><b>Mail</b></h3>
+				<span class="contact__description">info@aradhyhospital.com</span>
+			  </div>
+		
+			  <!-- <div class="contact__box">
+				<i class="bx bx-chat contact__icon"></i>
+				<h3 class="contact__title">Chat</h3>
+				<div>
+				  <a href="#" class="contact__social"><i class="bx bxl-whatsapp-square"></i></a>
+				  <a href="#" class="contact__social"><i class="bx bxl-telegram"></i></a>
+				  <a href="#" class="contact__social"><i class="bx bxl-messenger"></i></a>
+				</div>
+			  </div> -->
+			</div>
+			</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 					</div>
 		</div>
 							</div>
@@ -575,7 +831,8 @@ color:#9c9c9c;
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-644efd7 elementor-widget elementor-widget-image" data-id="644efd7" data-element_type="widget" data-widget_type="image.default">
 				<div class="elementor-widget-container">
-															<img loading="lazy" decoding="async" width="500" height="85" src="./hmm_logo-removebg-preview.png" class="attachment-large size-large wp-image-75" alt="" srcset="./hmm_logo-removebg-preview.png 500w, ./hmm_logo-removebg-preview.png 300w" sizes="(max-width: 500px) 100vw, 500px" />															</div>
+															<img loading="lazy" decoding="async" width="500" height="85" src="./hmm_logo-removebg-preview.png" class="attachment-large size-large wp-image-75" alt="" srcset="./hmm_logo-removebg-preview.png 500w, ./hmm_logo-removebg-preview.png 300w" sizes="(max-width: 500px) 100vw, 500px" />				
+																									</div>
 				</div>
 				<section class="elementor-section elementor-inner-section elementor-element elementor-element-dfab231 elementor-section-boxed elementor-section-height-default elementor-section-height-default" data-id="dfab231" data-element_type="section">
 						<div class="elementor-container elementor-column-gap-default">
