--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ color:#9c9c9c;
 		                     <div class="zita-logo">
 								<!-- <a   href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img  id="zuin" width="150" height="45" src="./ARADHYA MULTISPECIALITY HOSPITAL PVT.LTD.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 30vw, 70px" style="margin-top: -2.5vh;" /></a> -->
 <br>
-<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img id="zoomy" width="500" height="115" src="./ARADHYA MULTISPECIALITY HOSPITAL PVT.LTD (1).png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 200vw, 600px" style="margin-top: -3vh;" /></a></div>
+<a href="https://www.aradhyamultispecialityhospital.com" class="custom-logo-link" rel="home" aria-current="page"><img id="zoomy" width="500" height="115" src="./ARADHYA_MULTISPECIALITY_HOSPITAL_PVT.LTD__1_-removebg-preview.png" class="custom-logo" alt="Aradhya" decoding="async" srcset="" sizes="(max-width: 500px) 200vw, 600px" style="margin-top: -2vh; margin-bottom: 10px;" /></a></div>
                         </div>
                           <div class="main-header-col2">
    
