--- a/index.html
+++ b/index.html
@@ -712,19 +712,7 @@ color:#9c9c9c;
   border: none;
 }
 
-/*===== MEDIA QUERIES =====*/
-@media screen and (min-width: 576px) {
-  .contact__form {
-    width: 450px;
-    justify-self: center;
-  }
 
-  .contact__container{
-	margin-left: 20px !important;
-	/* padding-left: 300px; */
-	width: 60vw;
-}
-}
 
 @media screen and (min-width: 1024px) {
   .bd-container {
@@ -740,7 +728,7 @@ color:#9c9c9c;
 }
 @media only screen and (max-width: 767px) {
 	.contact__container{
-	margin-left: 90px;
+	margin-left: 70px;
 	/* padding-left: 300px; */
 	width: 60vw;
 }
@@ -773,7 +761,7 @@ color:#9c9c9c;
 			  <div class="contact__box">
 				<i class="bx bx-envelope contact__icon"></i>
 				<h3 class="contact__title"><b>Mail</b></h3>
-				<span class="contact__description">info@aradhyhospital.com</span>
+				<span class="contact__description">info@aradhyahospital.com</span>
 			  </div>
 		
 			  <!-- <div class="contact__box">
